fix: small screen gaps

--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -92,5 +92,7 @@ body {
     .user-info {
         grid-template-columns: none;
         grid-template-rows: auto auto;
+        gap: 10px;
+        margin: 5px 0;
     }
 }
